--- a/_includes/blog_post_article.html
+++ b/_includes/blog_post_article.html
@@ -43,12 +43,12 @@
       {% include author.html %}
     {% endif %}
   </div>
-  {%- if site.hyvor_talk_website_id -%}
+  {%- if site.disqus_shortname -%}
   <div class="comments">
-    {%- include hyvor_comments.html -%}
+    {%- include blog_post_comments.html -%}
    </div>
     {%- endif -%}
-  <!-- Incomment incase you want to use Disqus
+  <-- Incomment incase you want to use Disqus
       <div id="disqus_thread"></div>
    -->
 
