--- a/_includes/blog_post_article.html
+++ b/_includes/blog_post_article.html
@@ -48,9 +48,8 @@
     {%- include blog_post_comments.html -%}
    </div>
     {%- endif -%}
-  <-- Incomment incase you want to use Disqus
+ Incomment incase you want to use Disqus
       <div id="disqus_thread"></div>
-   -->
 
 
 </article>
