--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -10,7 +10,7 @@ layout: default
   });
 </script>
     <div class="jumbotron" style="text-align: center; background-image:url(/assets/img/bg_gr_moon.jpg); background-size: cover;">
-      <img class="author-profile-img" src="{{site.url}}{{site.baseurl}}/assets/img/profile.png" />
+      <img class="author-profile-img" src="{{site.url}}{{site.baseurl}}/assets/img/profile2.png" />
       <p class="jumbotron-heading">Hi, I am {{site.author}} !</p>
       <p class="lead" id="typewriteText"></p>
          {%- include github_star_button.html -%}
